[gd_scene load_steps=5 format=1]

[ext_resource path="res://addons/closeup_dialogs/closeup_dialog_ui.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Lavi.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Fonts/lavi_dync.fnt" type="BitmapFont" id=3]

[sub_resource type="Animation" id=1]

resource/name = "DialogStartup"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackgroundPanel/Panel:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 0.5 ] }

[node name="Node2D" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]

editor/display_folded = true

[node name="Label" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 84.0
margin/bottom = 14.0
text = "Hello, World!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="UI"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 570.0
margin/right = 1280.0
margin/bottom = 720.0

[node name="Text" type="RichTextLabel" parent="UI/Panel"]

anchor/left = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 640.0
margin/top = 22.0
margin/right = 1280.0
margin/bottom = 116.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[center]Hello, World![/center]"
visible_characters = -1

[node name="Panel 2" type="Panel" parent="UI"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 540.0
margin/right = 300.0
margin/bottom = 570.0

[node name="CharacterName" type="Label" parent="UI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 540.0
margin/right = 300.0
margin/bottom = 570.0
custom_fonts/font = ExtResource( 3 )
text = "Character Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Node2D" parent="UI" instance_placeholder="res://Scenes/UI/character_closeups/pepper.tscn"]

transform/pos = Vector2( 304.008, 0 )
z/z = -1

[node name="Node2D1" parent="UI" instance_placeholder="res://Scenes/UI/character_closeups/pepper.tscn"]

transform/pos = Vector2( 980.942, 0 )
z/z = -1

[node name="PlaceHolderLeft" type="Node2D" parent="UI"]

transform/pos = Vector2( 304.008, 0 )

[node name="PlaceHolderRight" type="Node2D" parent="UI"]

transform/pos = Vector2( 980.942, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/DialogStartup = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="BackgroundPanel" type="Node2D" parent="."]

z/z = -2

[node name="Panel" type="Panel" parent="BackgroundPanel"]

visibility/opacity = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0


